# vertex-ai-examples

./: .gitignore  README.md  cloud_run_spacy.ipynb  hugging_face_to_model_registry.ipynb
cpp_on_vertex/cpp_hello_training/: CMakeLists.txt  Dockerfile  README.md  config.yaml  hello.cc  vcpkg.json
pytorch_on_vertex/: gcp_setup.ipynb  pytorch_experiments_cifar10.ipynb  pytorch_mnist_distributed_training_python_package.ipynb  pytorch_mnist_training_python_package.ipynb  pytorch_mnist_training_simple.ipynb
pytorch_on_vertex/.ipynb_checkpoints/: pytorch_mnist_training_simple-checkpoint.ipynb
pytorch_on_vertex/python_package/: setup.py
pytorch_on_vertex/python_package/trainer/: model.py  task.py
pytorch_on_vertex/python_package/trainer.egg-info/: PKG-INFO  SOURCES.txt
